--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -156,7 +156,7 @@
             <!-- Predefined Answers -->
             <li class="nav-item">
                 <a href="{% url 'Answer:list' %}" class="nav-link">
-                    <i class="nav-icon fas fa-tachometer-alt"></i>
+                    <i class="nav-icon fas fa-message"></i>
                     <p>
                         {% translate 'Predefined Answers' %}
                     </p>
