--- a/apps/base/templates/sales/modal_chat.html
+++ b/apps/base/templates/sales/modal_chat.html
@@ -49,8 +49,7 @@
         </div>
         <div style="width: 100%;">
             <small class="col-11 text-muted">
-                {% translate 'Do not include personal info, offensive language, links to social networks or Mercado
-                Pago.' %}
+                {% translate 'Do not include personal info, offensive language, links to social networks or Mercado Pago.' %}
             </small>
             <small class="col-1 float-right text-muted" id="characters-left">0/350</small>
         </div>
