--- a/apps/base/templates/sales/chat.html
+++ b/apps/base/templates/sales/chat.html
@@ -12,7 +12,7 @@
         <!-- /.direct-chat-img -->
         <div class="direct-chat-text"
              style="background-color: #007bff; border-color: #007bff; color: #fff; float: right; margin-right: 10px !important;">
-            {{ message.text }}
+            {% autoescape off %}{{ message.text }}{% endautoescape %}
             {% if message.attachment %}
             {% if message.attachment.type|slice:":5" == 'image' %}
             <img src="{{ message.attachment.url }}" style="max-width: 100%; max-height: 100%;">
