--- a/apps/base/templates/common/_modal.html
+++ b/apps/base/templates/common/_modal.html
@@ -5,7 +5,14 @@
     </div>
 </div>
 
-<div class="modal fade" id="modal-lg" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modal-chat" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="modal-invoice" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
         </div>
