--- a/templates/javascript_header.html
+++ b/templates/javascript_header.html
@@ -12,5 +12,5 @@
 <!-- Select2 -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/js/select2.min.js"></script>
 
-<!-- Formset -->
-<script type="text/javascript" src="{% static 'vendor/jquery-formset/jquery.formset.js' %}"></script>
+<!--&lt;!&ndash; Formset &ndash;&gt;-->
+<!--<script type="text/javascript" src="{% static 'vendor/jquery-formset/jquery.formset.js' %}"></script>-->
