--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% load static %}
 {% load i18n %}
 
@@ -6,6 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Facturación | Sabores Hidalgo</title>
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon"/>
+
 
     {% block stylesheet %}
     {% include 'stylesheet.html' %}
