--- a/apps/base/templates/invoice/modal_detail.html
+++ b/apps/base/templates/invoice/modal_detail.html
@@ -107,7 +107,7 @@
     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
     {% if factura == '' %}
     <button type="button" class="btn btn-info" id="send_cfdi_btn"
-            data-bs-formurl="{% url 'Invoice:send_cfdi' object.id %}">Enviar Factura
+            data-bs-formurl="{% url 'Invoice:send_cfdi' buyer_id object.id %}">Enviar Factura
     </button>
     {% endif %}
 </div>
