--- a/templates/javascript_header.html
+++ b/templates/javascript_header.html
@@ -9,8 +9,17 @@
   $.widget.bridge('uibutton', $.ui.button)
 </script>
 
+<!-- Bootstrap 5.1.1 -->
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
+
 <!-- Select2 -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/js/select2.min.js"></script>
+
+<!-- Toastr -->
+<script src="{% static 'vendor/admin-lte/plugins/toastr/toastr.min.js' %}"></script>
 
 <!--&lt;!&ndash; Formset &ndash;&gt;-->
 <!--<script type="text/javascript" src="{% static 'vendor/jquery-formset/jquery.formset.js' %}"></script>-->
