--- a/apps/base/templates/common/list.html
+++ b/apps/base/templates/common/list.html
@@ -40,13 +40,13 @@
                 </button>
                 {% endif %}
                 {% if web_parameter.show_btn_export == 'True' %}
-                <a title=" {{ _('Download') }}" href="#" class="btn btn-light"><i class="fa fa-file-excel"></i></a>
+                <a title=" {{ _('Download') }}"    class="btn btn-light"><i class="fa fa-file-excel"></i></a>
                 {% endif %}
                 {% if web_parameter.show_btn_import == 'True' %}
-                <a title=" {{ _('Import') }}" href="#" class="btn btn-light"><i class="fas fa-upload"></i></i></a>
+                <a title=" {{ _('Import') }}"    class="btn btn-light"><i class="fas fa-upload"></i></i></a>
                 {% endif %}
                 {% if web_parameter.show_btn_mass == 'True' %}
-                <a title=" {{ _('Massive Edition') }}" href="#" class="btn btn-light"><i class="fa fa-exclamation"></i></a>
+                <a title=" {{ _('Massive Edition') }}"    class="btn btn-light"><i class="fa fa-exclamation"></i></a>
                 {% endif %}
             </div>
             <div class="card-body">
