--- a/apps/base/templates/dashboard/demo-dashboard.html
+++ b/apps/base/templates/dashboard/demo-dashboard.html
@@ -130,7 +130,7 @@
                 <div class="direct-chat-contacts">
                   <ul class="contacts-list">
                     <li>
-                      <a href="#">
+                      <a   >
                         <img class="contacts-list-img" src="{% static 'bower_components/admin-lte/dist/img/user1-128x128.jpg' %}" alt="User Avatar">
 
                         <div class="contacts-list-info">
@@ -145,7 +145,7 @@
                     </li>
                     <!-- End Contact Item -->
                     <li>
-                      <a href="#">
+                      <a   >
                         <img class="contacts-list-img" src="{% static 'bower_components/admin-lte/dist/img/user7-128x128.jpg' %}" alt="User Avatar">
 
                         <div class="contacts-list-info">
@@ -160,7 +160,7 @@
                     </li>
                     <!-- End Contact Item -->
                     <li>
-                      <a href="#">
+                      <a   >
                         <img class="contacts-list-img" src="{% static 'bower_components/admin-lte/dist/img/user3-128x128.jpg' %}" alt="User Avatar">
 
                         <div class="contacts-list-info">
@@ -175,7 +175,7 @@
                     </li>
                     <!-- End Contact Item -->
                     <li>
-                      <a href="#">
+                      <a   >
                         <img class="contacts-list-img" src="{% static 'bower_components/admin-lte/dist/img/user5-128x128.jpg' %}" alt="User Avatar">
 
                         <div class="contacts-list-info">
@@ -190,7 +190,7 @@
                     </li>
                     <!-- End Contact Item -->
                     <li>
-                      <a href="#">
+                      <a   >
                         <img class="contacts-list-img" src="{% static 'bower_components/admin-lte/dist/img/user6-128x128.jpg' %}" alt="User Avatar">
 
                         <div class="contacts-list-info">
@@ -205,7 +205,7 @@
                     </li>
                     <!-- End Contact Item -->
                     <li>
-                      <a href="#">
+                      <a   >
                         <img class="contacts-list-img" src="{% static 'bower_components/admin-lte/dist/img/user8-128x128.jpg' %}" alt="User Avatar">
 
                         <div class="contacts-list-info">
@@ -249,11 +249,11 @@
 
                 <div class="card-tools">
                   <ul class="pagination pagination-sm">
-                    <li class="page-item"><a href="#" class="page-link">&laquo;</a></li>
-                    <li class="page-item"><a href="#" class="page-link">1</a></li>
-                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item"><a href="#" class="page-link">3</a></li>
-                    <li class="page-item"><a href="#" class="page-link">&raquo;</a></li>
+                    <li class="page-item"><a    class="page-link">&laquo;</a></li>
+                    <li class="page-item"><a    class="page-link">1</a></li>
+                    <li class="page-item"><a    class="page-link">2</a></li>
+                    <li class="page-item"><a    class="page-link">3</a></li>
+                    <li class="page-item"><a    class="page-link">&raquo;</a></li>
                   </ul>
                 </div>
               </div>
@@ -486,10 +486,10 @@
                       <i class="fas fa-bars"></i>
                     </button>
                     <div class="dropdown-menu" role="menu">
-                      <a href="#" class="dropdown-item">Add new event</a>
-                      <a href="#" class="dropdown-item">Clear events</a>
+                      <a    class="dropdown-item">Add new event</a>
+                      <a    class="dropdown-item">Clear events</a>
                       <div class="dropdown-divider"></div>
-                      <a href="#" class="dropdown-item">View calendar</a>
+                      <a    class="dropdown-item">View calendar</a>
                     </div>
                   </div>
                   <button type="button" class="btn btn-success btn-sm" data-card-widget="collapse">
