--- a/apps/base/templates/common/wizard.html
+++ b/apps/base/templates/common/wizard.html
@@ -85,7 +85,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-                <a href="#" id="submit" class="btn btn-success success">Enviar</a>
+                <a    id="submit" class="btn btn-success success">Enviar</a>
             </div>
         </div>
     </div>
