--- a/apps/base/templates/factura/success.html
+++ b/apps/base/templates/factura/success.html
@@ -60,7 +60,7 @@
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <a href="#" id="submit" class="btn btn-success success">Submit</a>
+                <a    id="submit" class="btn btn-success success">Submit</a>
             </div>
         </div>
     </div>
