--- a/apps/base/templates/usercustom/password_reset_form.html
+++ b/apps/base/templates/usercustom/password_reset_form.html
@@ -42,7 +42,7 @@
                 <div class="card-header d-flex p-0">
                     <ul class="nav nav-pills ml-auto p-2">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" type="button" data-toggle="dropdown" href="#"><i class="fas fa-globe"></i>&nbsp;{{ _('Language') }}</a>
+                            <a class="nav-link dropdown-toggle" type="button" data-toggle="dropdown"   ><i class="fas fa-globe"></i>&nbsp;{{ _('Language') }}</a>
                             <div class="dropdown-menu">
                                 {% for language in languages %}
                                     {% if LANGUAGE_CODE != language.code %}
