--- a/apps/base/templates/usercustom/signup.html
+++ b/apps/base/templates/usercustom/signup.html
@@ -76,7 +76,7 @@
                         <div class="icheck-primary">
                             <input type="checkbox" id="agreeTerms" name="terms" value="agree">
                             <label for="agreeTerms">
-                                I agree to the <a href="#">terms</a>
+                                I agree to the <a   >terms</a>
                             </label>
                         </div>
                     </div>
@@ -90,11 +90,11 @@
 
             <div class="social-auth-links text-center">
                 <p>- OR -</p>
-                <a href="#" class="btn btn-block btn-primary">
+                <a    class="btn btn-block btn-primary">
                     <i class="fab fa-facebook mr-2"></i>
                     Sign up using Facebook
                 </a>
-                <a href="#" class="btn btn-block btn-danger">
+                <a    class="btn btn-block btn-danger">
                     <i class="fab fa-google-plus mr-2"></i>
                     Sign up using Google+
                 </a>
