--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<strong>Copyright &copy; 2022 <a href="#">Balaam León</a>.</strong>
+<strong>Copyright &copy; 2022 <a  >Balaam León</a>.</strong>
 All rights reserved.
 <div class="float-right d-none d-sm-inline-block">
     <b>Version</b> 1.0
