--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <!-- Left navbar links -->
 <ul class="navbar-nav">
     <li class="nav-item">
-        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+        <a class="nav-link" data-widget="pushmenu" role="button"><i class="fas fa-bars"></i></a>
     </li>
     {% if web_parameter.custome_title %}
     <li>
@@ -15,7 +15,7 @@
 <ul class="navbar-nav ml-auto">
     <!-- Navbar Search -->
     <li class="nav-item">
-        <a class="nav-link" data-widget="navbar-search" href="#" role="button">
+        <a class="nav-link" data-widget="navbar-search"   role="button">
             <i class="fas fa-search"></i>
         </a>
         <div class="navbar-search-block">
