--- a/apps/base/templates/auth/login.html
+++ b/apps/base/templates/auth/login.html
@@ -8,7 +8,7 @@
     <div class="card-body login-card-body">
         <p class="login-box-msg">{% trans "Sign in to start your session" %}</p>
 
-        <form method="post" action="{% url 'CustomUser:login' %}">
+        <form method="post" action="{% url 'CustomUser:login' %}" class="login-form">
 
             {% load crispy_forms_tags %}
             {% crispy form %}
@@ -25,7 +25,7 @@
                     </div>
                     <!-- /.col -->
                     <div class="col-4">
-                        <button type="submit" class="btn btn-primary btn-block">{% trans "Sign In" %}</button>
+                        <button type="submit" class="btn btn-primary btn-block">{% trans "Login" %}</button>
                     </div>
                     <!-- /.col -->
                 </div>
